--- a/Examenes/PHP-9/Material adicional/Vistas/listado_tareas_desarrollador.html
+++ b/Examenes/PHP-9/Material adicional/Vistas/listado_tareas_desarrollador.html
@@ -5,21 +5,10 @@
     <head>
         <meta charset="UTF-8">
         <title>PA - Examen PHP (Diciembre, 2018)</title>
-        <?php
-        session_start();
-        
-        if(isset($_SESSION['nombre'])) {
-            $mensajeBien = "<h2>Bienvenido Usuario " . $_SESSION['nombre'] . "</h2>";
-        }else{
-            header('location: loginForm.php');
-        }
-        ?>
-
     </head>
     <body>
-
         <h1>Gestor tareas</h1>
-        <?php echo $mensajeBien ?>
+        <h2>Bienvenido Usuario pepe</h2>
         <form action='#' method='POST'>
             <input type='submit' name='btnLogout' value='Cerrar sesi&oacute;n'/>                
         </form>
@@ -50,7 +39,7 @@
                     <td align='center'>pepe</td>
                 </tr>
                 <tr>
-                    <td align='center'><input type='checkbox' name='tarea1' value='7' /></td>
+					<td align='center'><input type='checkbox' name='tarea1' value='7' /></td>
                     <td align='center'>Implementar login</td>
                     <td align='center'>Implementar formulario de login de la web</td>
                     <td align='center'>
@@ -61,7 +50,7 @@
                     <td align='center'><a href='anexos/1543423266prueba2.pdf'>1543423266prueba2.pdf</a> </td>
                     <td align='center'></td>
                 </tr>   
-                <tr>
+				<tr>
                     <td><input type='checkbox' name='tarea2' value='8' /></td>
                     <td align='center'>Realizar pruebas unitarias</td>
                     <td align='center'>Pasarle las pruebas unitarias al proyecto</td>
@@ -74,7 +63,7 @@
                     <td align='center'></td>
                     <td align='center'></td>
                 </tr>				
-                <input name="total_checks" type="hidden" value="2">
+				<input name="total_checks" type="hidden" value="2">
             </table>
 
             <input type='submit' name='btnTareas' value='Seleccionar tarea/s'/>
