--- a/Examenes/PHP-9/Material adicional/Vistas/listado_tareas_jefe.html
+++ b/Examenes/PHP-9/Material adicional/Vistas/listado_tareas_jefe.html
@@ -5,21 +5,10 @@
     <head>
         <meta charset="UTF-8">
         <title>PA - Examen PHP (Diciembre, 2018)</title>
-        <?php
-        session_start();
-        
-        if(isset($_SESSION['nombre'])) {
-            $mensajeBien = "<h2>Bienvenido Usuario " . $_SESSION['nombre'] . "</h2>";
-        }else{
-            header('location: loginForm.php');
-        }
-        ?>
-
     </head>
     <body>
-
         <h1>Gestor tareas</h1>
-        <?php echo $mensajeBien ?>
+        <h2>Bienvenido Usuario admin</h2>
         <form action='#' method='POST'>
             <input type='submit' name='btnLogout' value='Cerrar sesi&oacute;n'/>                
         </form>
@@ -37,7 +26,7 @@
                     <th>Usuario</th>
                 </tr>                        
                 <tr>
-                    <td></td>
+                    <td><input type='checkbox' name='tarea1' value='6' /></td>
                     <td align='center'>Prueba</td>
                     <td align='center'>Descripcion de prueba</td>
                     <td align='center'>
@@ -50,7 +39,7 @@
                     <td align='center'>pepe</td>
                 </tr>
                 <tr>
-                    <td align='center'><input type='checkbox' name='tarea1' value='7' /></td>
+					<td align='center'><input type='checkbox' name='tarea2' value='7' /></td>
                     <td align='center'>Implementar login</td>
                     <td align='center'>Implementar formulario de login de la web</td>
                     <td align='center'>
@@ -60,9 +49,9 @@
                     </td>
                     <td align='center'><a href='anexos/1543423266prueba2.pdf'>1543423266prueba2.pdf</a> </td>
                     <td align='center'></td>
-                </tr>   
-                <tr>
-                    <td><input type='checkbox' name='tarea2' value='8' /></td>
+                </tr>
+				<tr>
+                    <td><input type='checkbox' name='tarea3' value='8' /></td>
                     <td align='center'>Realizar pruebas unitarias</td>
                     <td align='center'>Pasarle las pruebas unitarias al proyecto</td>
                     <td align='center'>
@@ -73,12 +62,15 @@
                     </td>
                     <td align='center'></td>
                     <td align='center'></td>
-                </tr>				
-                <input name="total_checks" type="hidden" value="2">
+                </tr>
+				<input name="total_checks" type="hidden" value="3">
             </table>
 
-            <input type='submit' name='btnTareas' value='Seleccionar tarea/s'/>
+            <input type='submit' name='btnBorrar' value='Eliminar tarea/s'/>
         </form>
+		<form action="#" method="POST">
+			<input type='submit' name='btnNueva' value='Nueva Tarea'/>
+		</form>
     </body>
 </html>
 
